--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "start:dev:gateway": "nest start api-gateway --watch",
     "start:dev:auth": "nest start auth-service --watch",
     "start:dev:table": "nest start table-service --watch",
+    "start:dev:order": "nest start order-service --watch",
+    "start:dev:food": "nest start food-service --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -27,8 +29,11 @@
     "docker:logs:gateway": "docker-compose logs -f api-gateway",
     "docker:logs:auth": "docker-compose logs -f auth-service",
     "docker:logs:table": "docker-compose logs -f table-service",
+    "docker:logs:order": "docker-compose logs -f order-service",
+    "docker:logs:food": "docker-compose logs -f food-service",
     "docker:logs:postgres": "docker-compose logs -f postgres-auth",
     "docker:logs:redis": "docker-compose logs -f redis",
+    "docker:create-databases": "bash docker/create-databases.sh",
     "migration:table:run": "ts-node -r tsconfig-paths/register apps/table-service/src/migrations/run-migration.ts",
     "migration:table:run:sql": "docker exec -i postgres-auth psql -U postgres -d table_db < docker/migrate-table-number-to-string.sql"
   },
